# HADES

./: CMakeLists.txt  README.md  install.sh  run_server.sh  run_trainer.sh
example/: launch_server.py  train_dist_transductive_gat.py  train_dist_transductive_graphsage.py
example/utils/: load_graph.py  partition_graph.py
python/: setup.py
python/EmbCache/: __init__.py  client.py  dist_emb.py  server.py  sparse_optim.py
python/EmbCache.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: pybind.cc  utils.h
src/cache/: cache.h  cache_line.h  cache_ops.h  lookup.cu
src/cuda/: binary_search.cu  ops.h  pin_memory.cu  split.cu  uva_fetch.cu  uva_set.cu
src/ipc/: cuda_ipc.h
src/shm/: shared_memory.h
test/: client_with_cache.py  example_polling_client.py  example_polling_server.py  example_server_split_staled.py  ping_client.py  ping_server.py  server_with_cache.py  test_binarysearch2.py  test_binaryserach.py  test_cache.py  test_cached_fetch.py  test_cached_fetch_1D.py  test_cached_set.py  test_cached_set_1D.py  test_combine.py  test_fetch.py  test_lookup.py  test_mpi.py  test_pin.py  test_single_cache.py  test_socket_client.py  test_socket_server.py  test_split.py
